fix parmap